# pen-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
pen_core/: __init__.py  _version.py  cli.py
tests/: conftest.py  test_placeholder.py
